FIX: Z-index
FIX: Changed to higher z-index to appear above most HTML.

--- a/jquery.meow.css
+++ b/jquery.meow.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 9999;
 }
 
 .meow {
